trufflized and fixed web3

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,7 @@
   <h1>EtherFlipper</h1><br>
   <h2>Detects Web3 if available!</h2>
   <div><img id="coinAnimation" src="images/flip.gif" alt="COIN FLIPPING..." style="width:200px;display:block;margin:auto;"><div>
-  <h3><span class="black"><span id="outcome">Outcome: ...</span></span></h3>
+  <h3><span class="black"><span id="outcome">Checking Ethereum Connection...</span></span></h3>
   <div><img id="theCode" src="images/theCode.png" alt="SOURCE CODE..." style="width:100%;display:block;margin:auto;"><div>
-
 </body>
 </html>
