image issue possible workaround

--- a/app/index.html
+++ b/app/index.html
@@ -12,5 +12,8 @@
   <div><img id="coinAnimation" src="images/flip.gif" alt="COIN FLIPPING..." style="width:200px;display:block;margin:auto;"><div>
   <h3><span class="black"><span id="outcome">Checking Ethereum Connection...</span></span></h3>
   <div><img id="theCode" src="images/theCode.png" alt="SOURCE CODE..." style="width:100%;display:block;margin:auto;"><div>
+
+  <img src="images/HEADS.png" style="display:none;">
+  <img src="images/TAILS.png" style="display:none;">
 </body>
 </html>
